--- a/src/index.html
+++ b/src/index.html
@@ -37,7 +37,7 @@
         </div>
         <div class="widget-content" id="widget-content"></div>
     </div>
-    <script type="text/javascript" src="http://localhost:5500/lib/fm-bridge.js"></script>
+    <script type="text/javascript" src="http://localhost:5500/lib/fm-bridge-backend.js"></script>
     <script type="text/javascript">
         window.onload = function () {
             let context = {
@@ -52,9 +52,9 @@
             document.getElementById('companyId').value = context.companyId;
             document.getElementById('urlBase').value = context.urlBase;
             if (context.loginToken && context.companyId && context.urlBase) {
-                window.FmBridge.init(context);
-                window.FmBridge.setContext(context);
-                window.FmBridge.loadFrame({{id}}, 'http://localhost:{{port}}', 'widget-content');
+                window.FmBridgeBackend.init(context);
+                window.FmBridgeBackend.setContext(context);
+                window.FmBridgeBackend.loadFragment({{id}}, 'http://localhost:{{port}}', 'widget-content');
             } else {
                 console.log('No Context set')
                 var panel = document.getElementById('config-panel');
