--- a/src/index.html
+++ b/src/index.html
@@ -204,7 +204,7 @@
         overflow-y: auto;
         background-color: white;
     }
-    .forceframe{
+    .fragment{
         width: 100%;
         height: 100%;
         border: none;
