--- a/src/index.html
+++ b/src/index.html
@@ -7,7 +7,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link href='https://fonts.googleapis.com/css?family=Roboto:400' rel='stylesheet' type='text/css'>
 </head>
-<body>
+<body id="dev-body">
     <div class="header">
         <h1 class="title">ForceManager Fragment Development - {{widgetType}} {{type}}</h1>
         <div class="config-icon" onClick="toggleConfig()">
@@ -18,6 +18,10 @@
         <div class="config-panel-item">
             <label>{{entity}} ID</label>
             <input type="text" id="companyId" name="companyId">
+        </div>
+        <div class="config-panel-item">
+            <label>User ID</label>
+            <input type="text" id="userId" name="userId">
         </div>
         <div class="config-panel-item">
             <label>URL Base</label>
@@ -33,11 +37,29 @@
     </div>
     <div id="widget" class="widget widget-col-{{columns}}">
         <div class="widget-header">
-            <div class="widget-title" class="title">{{title}}</div>
+            <div class="widget-title"></div>{{title}}</div>
         </div>
         <div class="widget-content" id="widget-content"></div>
     </div>
     <div id="form" class="form">
+        <div class="form-header">
+            <div id="form-title" class="form-title">Creación formulario</div>
+        </div>
+        <div class="form-camera-images">
+            <div class="form-camera-images-header">
+                <div class="form-camera-images-header-title">IMÁGENES</div>
+                <div class="form-camera-images-header-collapse"></div>
+            </div>
+            <div class="form-camera">
+                <div class="form-camera-icon"></div>
+            </div>
+            <div class="form-images"></div>
+        </div>
+        <div class="form-content" id="form-content"></div>
+    </div>
+    <div id="loader" class="loader-container">
+        <div class="shadow"></div>
+        <div class="loader"></div>
     </div>
     <script type="text/javascript" src="http://localhost:5500/lib/fm-bridge-backend.js"></script>
     <script type="text/javascript">
@@ -48,27 +70,42 @@
                 entity: '{{entity}}',
                 deviceOS: 'web',
             };
+            let domEl;
             context['loginToken'] = sessionStorage.getItem('fmDevToken') ? sessionStorage.getItem('fmDevToken') : '';
             context['companyId'] = sessionStorage.getItem('fmDevCompanyId') ? sessionStorage.getItem('fmDevCompanyId') : '';
             context['urlBase'] = sessionStorage.getItem('fmDevUrlBase') ? sessionStorage.getItem('fmDevUrlBase') : 'https://api.forcemanager.net/api/v4';
+            let userId = sessionStorage.getItem('userId') ? sessionStorage.getItem('userId') : '';
+            let userName = localStorage.getItem('name') ? sessionStorage.getItem('name') : '';
+            context['user'] = { 'id': userId, 'name': userName };
             document.getElementById('token').value = context.loginToken;
             document.getElementById('companyId').value = context.companyId;
+            document.getElementById('userId').value = context.userId;
             document.getElementById('urlBase').value = context.urlBase;
             switch (context.type) {
                 case 'widget':
                     document.getElementById('widget').style.display = 'block';
+                    domEl = 'widget-content';
                     break;
                 case 'form':
                     document.getElementById('form').style.display = 'block';
+                    domEl = 'form-content';
+                    context['form'] = {
+                        'entityForm': null,
+                        'mode': 'creation',
+                        'isReadonly': false,
+                        'idState': -1,
+                        'endState': 0,
+                    };
                     break;
                 case 'page':
                     document.getElementById('page').style.display = 'block';
+                    domEl = 'page';
                     break;
             }
             if (context.loginToken && context.companyId && context.urlBase) {
                 window.FmBridgeBackend.init(context);
-                window.FmBridgeBackend.setContext(context);
-                window.FmBridgeBackend.loadFragment({{id}}, 'http://localhost:{{port}}', 'widget-content');
+                // window.FmBridgeBackend.setContext(context);
+                window.FmBridgeBackend.loadFragment({{id}}, 'http://localhost:{{port}}', domEl);
             } else {
                 console.log('No Context set')
                 var panel = document.getElementById('config-panel');
@@ -76,8 +113,9 @@
             }
         };
         function onSave() {
-            sessionStorage.setItem('fmDevToken', document.getElementById('token').value);
             sessionStorage.setItem('fmDevCompanyId', document.getElementById('companyId').value);
+            sessionStorage.setItem('userId', document.getElementById('userId').value);
+            sessionStorage.setItem('fmDevToken', document.getElementById('token').value);
             sessionStorage.setItem('fmDevUrlBase', document.getElementById('urlBase').value);
             location.reload();
         }
@@ -95,14 +133,17 @@
         margin: 0;
         font-family: Roboto;
         width: 100vw;
-        overflow-x: hidden;
+        height: 100vh;
+        overflow: hidden;
     }
     .header {
         width: 100%;
+        height: 60px;
         background-color: #f8f8f8;
         border-bottom: 1px solid #eaeaea;
-        padding: 15px 0;
+        padding: 10px 0;
         margin: 0;
+        box-sizing: border-box;
         z-index: 100;
     }
     .title{
@@ -114,7 +155,7 @@
     }
     .config-icon{
         position: absolute;
-        top: 25px;
+        top: 20px;
         right: 20px;
         cursor: pointer;
     }
@@ -221,8 +262,12 @@
     }
     .form {
         width: 100%;
-        height: 100%;
+        height: calc(100vh - 70px);
+        overflow: hidden;
         display: none;
+    }
+    .form-content {
+        height: 100%;
     }
     .fragment{
         width: 100%;
