--- a/src/index.html
+++ b/src/index.html
@@ -99,7 +99,8 @@
             </div>
         </div>
     </div>
-    <script type="text/javascript" src="http://localhost:5500/lib/fm-bridge-backend.js"></script>
+    <!-- <script type="text/javascript" src="http://localhost:5500/lib/fm-bridge-backend.js"></script> -->
+    <script type="text/javascript" src="https://scm.forcemanager.net/csd/fm-bridge-backend/raw/master/lib/fm-bridge-backend.js"></script>
     <script type="text/javascript">
         window.onload = function () {
             let context = {
