--- a/src/index.html
+++ b/src/index.html
@@ -100,7 +100,7 @@
         </div>
     </div>
     <!-- <script type="text/javascript" src="http://localhost:5500/lib/fm-bridge-backend.js"></script> -->
-    <script type="text/javascript" src="https://scm.forcemanager.net/csd/fm-bridge-backend/raw/master/lib/fm-bridge-backend.js"></script>
+    <script type="text/javascript" src="https://fmassets.s3.amazonaws.com/fragments/fm-bridge-backend.js"></script>
     <script type="text/javascript">
         window.onload = function () {
             let context = {
