--- a/src/index.html
+++ b/src/index.html
@@ -7,7 +7,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link href='https://fonts.googleapis.com/css?family=Roboto:400' rel='stylesheet' type='text/css'>
 </head>
-<body id="dev-body">
+<body id="dev-body" class="fragment-{{type}}">
     <div class="header">
         <h1 class="title">ForceManager Fragment Development - {{widgetType}} {{type}}</h1>
         <div class="config-icon" onClick="toggleConfig()">
@@ -16,26 +16,45 @@
     </div>
     <div class="config-panel" id="config-panel">
         <div class="config-panel-item">
-            <label>{{entity}} ID</label>
-            <input type="text" id="entityId" name="entityId">
+            <label>Title</label>
+            <input type="text" id="title" name="title">
         </div>
         <div class="config-panel-item">
             <label>User ID</label>
             <input type="text" id="userId" name="userId">
         </div>
         <div class="config-panel-item">
-            <label>URL Base</label>
-            <input type="text" id="urlBase" name="urlBase" placeholder="https://api.forcemanager.net/api/v4">
+            <label>Enviroment</label>
+            <form>
+                <div class="form-item"><input type="radio" name="pro" value="pro"><label>Pro</label></div>
+                <div class="form-item"><input type="radio" name="pre" value="pre"><label>Pre</label></div>
+                <div class="form-item"><input type="radio" name="sta" value="sta"><label>Sta</label></div>
+            </form>
         </div>
-        <div class="config-panel-item">
-            <label>Token</label>
-            <textarea id="token" name="token"></textarea>
+        <div class="config-panel-item config-panel-item-widget config-panel-item-form">
+            <label>Entity</label>
+            <form>
+                <div class="form-item"><input type="radio" name="company" value="company"><label>Empany</label></div>
+                <div class="form-item"><input type="radio" name="opportunity" value="opportunity"><label>Opportunity</label></div>
+            </form>
+        </div>
+        <div class="config-panel-item config-panel-item-widget config-panel-item-form">
+            <label>Entity ID</label>
+            <input type="text" id="entityId" name="entityId">
+        </div>
+        <div class="config-panel-item  config-panel-item-widget">
+            <label>Columns</label>
+            <input type="text" id="columns" name="columns">
+        </div>
+        <div class="config-panel-item config-panel-item-widget">
+            <label>Rows</label>
+            <input type="text" id="rows" name="rows">
         </div>
         <div class="config-panel-item">
             <button type="button" id="save" name="save" onClick="onSave()">Save</button>
         </div>
     </div>
-    <div id="widget" class="widget widget-col-{{columns}}">
+    <div id="widget" class="widget widget-col-">
         <div class="widget-header">
             <div class="widget-title">{{title}}</div>
         </div>
@@ -99,28 +118,26 @@
             </div>
         </div>
     </div>
-    <!-- <script type="text/javascript" src="http://localhost:5500/lib/fm-bridge-backend.js"></script> -->
-    <script type="text/javascript" src="https://fmassets.s3.amazonaws.com/fragments/fm-bridge-backend.js"></script>
+    <script type="text/javascript" src="http://localhost:5500/lib/fm-bridge-backend.js"></script>
+    <!-- <script type="text/javascript" src="https://fmassets.s3.amazonaws.com/fragments/fm-bridge-backend.js"></script> -->
     <script type="text/javascript">
         window.onload = function () {
+            let domEl;
             let context = {
+                platform: 'dev',
                 type: '{{type}}',
                 widgetType: '{{widgetType}}',
+                widgetSubtype: '{{widgetSubtype}}',
                 entity: '{{entity}}',
-                deviceOS: 'dev',
             };
-            let domEl;
-            context['dev'] = true;
             context['loginToken'] = sessionStorage.getItem('fmDevToken') ? sessionStorage.getItem('fmDevToken') : '';
             context['entityId'] = sessionStorage.getItem('fmDevEntityId') ? sessionStorage.getItem('fmDevEntityId') : '';
-            context['urlBase'] = sessionStorage.getItem('fmDevUrlBase') ? sessionStorage.getItem('fmDevUrlBase') : 'https://api.forcemanager.net/api/v4';
-            let userId = sessionStorage.getItem('userId') ? sessionStorage.getItem('userId') : '';
-            let userName = localStorage.getItem('name') ? localStorage.getItem('name') : '';
-            context['user'] = { 'id': userId, 'name': userName };
+            context['env'] = sessionStorage.getItem('fmDevEnv') ? sessionStorage.getItem('fmDevEnv') : 'pro';
+            context['userData'] = sessionStorage.getItem('fmDevUserData') ? sessionStorage.getItem('fmDevUserData') : '';
             document.getElementById('token').value = context.loginToken;
             document.getElementById('entityId').value = context.entityId;
-            document.getElementById('userId').value = context.userId;
-            document.getElementById('urlBase').value = context.urlBase;
+            document.getElementById('env').value = context.env;
+            document.getElementById('userData').value = context.userData;
             window.scrollTo(0, 0);
             switch (context.type) {
                 case 'widget':
@@ -150,9 +167,10 @@
                     break;
             }
             if (context.loginToken && context.entityId && context.urlBase) {
-                window.FmBridgeBackend.init(context);
+                window.FmBridgeBackend.setContext(context);
+                window.FmBridgeBackend.init();
                 // window.FmBridgeBackend.setContext(context);
-                window.FmBridgeBackend.loadFragment({{id}}, 'http://localhost:{{port}}', domEl);
+                window.FmBridgeBackend.loadFragment(-1, 'http://localhost:{{port}}', domEl);
             } else {
                 console.log('No Context set')
                 let panel = document.getElementById('config-panel');
@@ -248,7 +266,7 @@
                 document.getElementById('signature').classList.remove('show');
             },
         };
-        
+
         function confirmDialog(res) {
             window.dispatchEvent(
                 new CustomEvent('showConfirmDialogResponse', {
@@ -368,6 +386,11 @@
         text-transform: uppercase;
         font-weight: 400;
         letter-spacing: 1px;
+    }
+    form {
+        display: flex;
+        width: 100%;
+        justify-content: space-between;
     }
     .widget {
         float: left;
